# robotics_demo

./: README.md  environment.yml  main.py  pyproject.toml
resources/models/iiwa14/: README.md
resources/networks/: demo.pth
robotics_demo/: actors.py  configs.py  demo.py  robot.py  utils.py
robotics_demo/control/: __init__.py  pid.py
robotics_demo/control/cost/: __init__.py  base.py  quadratic.py
robotics_demo/control/linear/: dynamics.py  lqr.py
robotics_demo/demo/: __init__.py  app.py  network_controller.py
robotics_demo/network/: __init__.py  base.py  lqr.py  network.py
robotics_demo/resources/models/iiwa14/urdf/: iiwa14_no_collision.urdf  iiwa14_no_collision_alpha.urdf
robotics_demo/resources/networks/: demo_good.pth
